@@ -4,8 +4,11 @@
 	<fieldset name="details"
 		addfieldpath="/administrator/components/com_banners/models/fields"
 	>
-		<field name="id" type="hidden" default="0" required="true"
-			readonly="true" />
+		<field name="id" type="text" default="0" required="true"
+			readonly="true" class="readonly" 
+			label="JGLOBAL_FIELD_ID_LABEL" description ="JGLOBAL_FIELD_ID_DESC"/>
+			
+			
 
 		<field name="name" type="text" class="inputbox"
 			size="40" label="COM_BANNERS_FIELD_CLIENT_NAME_LABEL"
