@@ -4,10 +4,13 @@
 	<fieldset>
 		<field
 			name="extension_id"
-			type="hidden"
+			label="JGLOBAL_FIELD_ID_LABEL" 
+			description ="JGLOBAL_FIELD_ID_DESC"
+			type="text"
 			default="0"
 			required="true"
-			readonly="true" />
+			readonly="true"
+			class="readonly" />
 
 		<field
 			name="name"
@@ -60,9 +63,8 @@
 
 		<field
 			name="ordering"
-			type="Ordering"
+			type="ordering"
 			class="inputbox"
-			default=""
 			label="JFIELD_ORDERING_LABEL"
 			description="JFIELD_ORDERING_DESC" />
 
