@@ -28,9 +28,7 @@ JHtml::_('behavior.formvalidation');
 <form action="<?php JRoute::_('index.php?option=com_templates'); ?>" method="post" name="adminForm" id="style-form" class="form-validate">
 	<div class="width-60 fltlft">
 		<fieldset class="adminform">
-			<?php if ($this->item->extension_id) : ?>
-			<legend><?php echo JText::sprintf('JGLOBAL_RECORD_NUMBER', $this->item->extension_id); ?></legend>
-			<?php endif; ?>
+			<legend><?php echo JText::_('JDETAILS') ?></legend>
 
 			<?php echo $this->form->getLabel('name'); ?>
 			<?php echo $this->form->getInput('name'); ?>
@@ -50,6 +48,11 @@ JHtml::_('behavior.formvalidation');
 
 			<?php echo $this->form->getLabel('element'); ?>
 			<?php echo $this->form->getInput('element'); ?>
+
+			<?php if ($this->item->extension_id) : ?>
+				<?php echo $this->form->getLabel('extension_id'); ?>
+				<?php echo $this->form->getInput('extension_id'); ?>	
+			<?php endif; ?>
 
 			<br class="clr" />
 
