@@ -5,10 +5,13 @@
 		<field
 			id="id"
 			name="id"
-			type="hidden"
+			type="text"
 			default="0"
 			required="true"
-			readonly="true" />
+			readonly="true"
+			class="readonly"
+			label="JGLOBAL_FIELD_ID_LABEL" 
+			description ="JGLOBAL_FIELD_ID_DESC" />
 
 		<field
 			name="old_url"
