@@ -28,9 +28,8 @@ JHtml::_('behavior.formvalidation');
 <form action="<?php JRoute::_('index.php?option=com_templates'); ?>" method="post" name="adminForm" id="style-form" class="form-validate">
 	<div class="width-60 fltlft">
 		<fieldset class="adminform">
-			<?php if ($this->item->id) : ?>
-			<legend><?php echo JText::sprintf('JGLOBAL_RECORD_NUMBER', $this->item->id); ?></legend>
-			<?php endif; ?>
+			<legend><?php echo JText::_('JOPTION_REQUIRED');?>	</legend>
+
 
 			<?php echo $this->form->getLabel('template'); ?>
 			<?php echo $this->form->getInput('template'); ?>
@@ -39,11 +38,17 @@ JHtml::_('behavior.formvalidation');
 			<?php echo $this->form->getInput('title'); ?>
 
 			<?php echo $this->form->getLabel('client_id'); ?>
-			<?php echo $this->form->getInput('client_id'); ?>
+			<input type="text" size="35" value="<?php echo $this->item->client_id == 0 ? JText::_('JSITE') : JText::_('JADMINISTRATOR'); ?>	" class="readonly" readonly="readonly" />		
+
 
 			<?php echo $this->form->getLabel('home'); ?>
 			<?php echo $this->form->getInput('home'); ?>
+		<div class="clr"></div>
+			<?php if ($this->item->id) : ?>
+				<?php echo $this->form->getLabel('id'); ?>	
+				<input type="text" size="35" value="<?php  echo ($text = (string) JText::_($this->item->id)); ?>" class="readonly" readonly="readonly" />			
 
+			<?php endif; ?>
 		</fieldset>
 	</div>
 
