@@ -4,10 +4,11 @@
 	<fieldset>
 		<field
 			name="id"
-			type="hidden"
+			type="text"
 			default="0"
 			required="true"
-			readonly="true" />
+			readonly="true"
+			class="readonly" />
 
 		<field
 			name="title"
