@@ -172,6 +172,8 @@ COM_CONTACT_FIELD_PARAMS_NAME_DESC="Show name of the contact"
 COM_CONTACT_FIELD_PARAMS_NAME_LABEL="Name"
 COM_CONTACT_FIELD_PARAMS_POST-ZIP_CODE_DESC="Show or Hide postal or zip code"
 COM_CONTACT_FIELD_PARAMS_POST-ZIP_CODE_LABEL="Postal Code"
+COM_CONTACT_FIELD_PARAMS_SHOW_IMAGE_LABEL="Image"
+COM_CONTACT_FIELD_PARAMS_SHOW_IMAGE_DESC="Show or Hide image"
 COM_CONTACT_FIELD_PARAMS_STATE-COUNTY_DESC="Show or Hide state or county"
 COM_CONTACT_FIELD_PARAMS_STATE-COUNTY_LABEL="State or County"
 COM_CONTACT_FIELD_PARAMS_STREET_ADDRESS_DESC="Show or Hide street address"
@@ -226,6 +228,7 @@ COM_CONTACT_SUBMENU_CATEGORIES="Categories"
 COM_CONTACT_SUBMENU_CONTACTS="Contacts"
 COM_CONTACT_TITLE_HEADING="Title"
 COMPONENT_ID="Component Id"
+CONTACT_ID_LABEL="ID"
 
 ;new contact broken as of March 16th 2010
 COM_CONTACT_WARNING_PROVIDE_VALID_URL="Please provide a valid URL"
