@@ -89,6 +89,7 @@ CONTENT_FIELDSET_ACCESS="Article Access Rules"
 
 CONTENT_ARTICLETEXT_LABEL="Article Text"
 CONTENT_ARTICLETEXT_DESC="CONTENT_ARTICLETEXT_DESC"
+CONTENT_ID_LABEL="ID"
 
 CONTENT_BLOG_USE_ARTICLE="Use Article"
 COM_CONTENT_FEATURED_CATEGORIES_LABEL="Select Categories"
