@@ -17,7 +17,7 @@ COM_PLUGINS_FIELD_FOLDER_LABEL="Plug-in Type"
 COM_PLUGINS_FIELD_NAME_DESC="The name of the plugin as defined in its xml"
 COM_PLUGINS_FIELD_NAME_LABEL="Plug-in Name"
 COM_PLUGINS_FOLDER_HEADING="Type"
-COM_PLUGINS_MANAGER_PLUGIN="Plug-in Manager: Plug-in"
+COM_PLUGINS_MANAGER_PLUGIN="Plug-in Manager:"
 COM_PLUGINS_MANAGER_PLUGINS="Plug-in Manager: Plug-ins"
 COM_PLUGINS_NAME_HEADING="Plug-in Name"
 COM_PLUGINS_OPTION_FOLDER="- Select Type -"
