@@ -39,6 +39,7 @@ JOFF="Off"
 JON="On"
 JPREVIOUS="Previous"
 JPUBLISHED="Published"
+JRECORD_NUMBER="Record Number"
 JSAVE="Save"
 JSHOW="Show"
 JSITE="Site"
@@ -49,6 +50,8 @@ JVERSION="Version"
 JUNARCHIVE="Remove from archive status"
 JUNPUBLISHED="Unpublished"
 JYES="Yes"
+JDETAILS="Details"
+JOPTIONS="Options"
 
 CONFIG_METADATA="Metadata configuration"
 
@@ -439,6 +442,8 @@ JGLOBAL_EMPTY_CATEGORIES_DESC="Whether to show or hide categories that contain n
 JGLOBAL_EMPTY_CATEGORIES_LABEL="Empty Categories"
 JGLOBAL_FEED_SUMMARY_DESC="If set to Intro Text, only the Intro Text of each article will show in the newsfeed. If set to Full Text, the whole article will show in the newsfeed."
 JGLOBAL_FEED_SUMMARY_LABEL="For each feed item show"
+JGLOBAL_FIELD_ID_LABEL="ID"
+JGLOBAL_FIELD_ID_DESC="Record number of the item in the database"
 JGLOBAL_FILTER_ATTRIBUTES_DESC="TIPSFILTERATTRIBUTES"
 JGLOBAL_FILTER_ATTRIBUTES_LABEL="Filter Attributes"
 JGLOBAL_FILTER_FIELD_DESC="Whether to show a Filter field for the list of articles. Select Hide to hide the filter field, or select which field you wish to filter on."
