@@ -36,6 +36,9 @@ JPUBLISHED="Published"
 JUNPUBLISHED="Unpublished"
 JDISABLED="Disabled"
 JENABLED="Enabled"
+JREQUIRED="Required"
+JDETAILS="Details"
+JOPTIONS="Options"
 
 JGLOBAL_USE_GLOBAL="Use Global"
 JGLOBAL_HITS="Hits"
