@@ -29,6 +29,7 @@ $ -> Language fix or change
 
 18-Apr-2010 Mark Dexter
 # Fix parse error in libraries/joomla/form/form.php
+# Display of record number in edit forms (Elin Waring)
 
 18-Apr-2010 Jean-Marie Simonet
 $ Added JText__ for item deletion. Correcting, adding some keys/inis
